// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          disabled={true}
          placeholder=" "
          type="search"
          value="Text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX jBhaYg"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX bVIEYj"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX iUwrth"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder=" "
          readOnly={true}
          type="search"
          value="Read only text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          dir="rtl"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOFsmt grWraG"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <input
        className="sc-oEczX edEsCe"
        placeholder="medium"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <input
        className="sc-oEczX hfbpVV"
        placeholder="large"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX BdQpe"
          placeholder="xlarge"
          type="search"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX cNRlAp"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX ldvpAa"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs iRhLvk"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
